updated readme to reflect completed task and new bug found. added static image size for project images. will test on mobile

--- a/src/components/ProjectItem.css
+++ b/src/components/ProjectItem.css
@@ -11,10 +11,13 @@
 }
 
 .project__item__image {
-  width: 20%;
-  height: 20%;
+  width: 200px;
 }
 
 .project__item__title {
   text-align: center;
+}
+
+.project__item__text {
+  padding: 20px;
 }
